--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/favicon.ico">
     <title>Reliarc</title>
+    <style>
+      /* 立即生效的背景，防止白屏闪烁 */
+      html, body {
+        margin: 0;
+        padding: 0;
+        background-color: #050505;
+        overflow: hidden;
+      }
+      #app {
+        background-color: #050505;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
