--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         padding: 0;
         background-color: #050505;
         overflow: hidden;
+        z-index: -9999;
       }
       #app {
         background-color: #050505;
         min-height: 100vh;
+        z-index: -9999;
       }
     </style>
   </head>
